--- a/steward.html
+++ b/steward.html
@@ -903,18 +903,20 @@ async function fetchTicketsSnapshot() {
   // 3) Deterministic fallback: document id ordering using __name__
   try {
     return await db.collection("tickets")
-      .orderBy("__name__")
+      .orderBy("__name__")   // ✅ FIXED
       .limit(500)
       .get();
   } catch (e3) {
     console.warn("orderBy(__name__) failed:", e3);
   }
 
-  // 4) Last resort: no ordering at all (should always return something if collection exists)
+  // 4) Last resort: no ordering at all
   return await db.collection("tickets")
     .limit(500)
     .get();
 }
+
+
 
     }
 
