--- a/ticket.html
+++ b/ticket.html
@@ -409,7 +409,7 @@
 
     $("backClassifierBtn").onclick = () => window.location.href = "index.html";
     $("backHeadBtn").onclick = () => window.location.href = "https://ifwlowner.github.io/ACC-driver-classifier/headsteward.html";
-    $("backSimgridBtn").onclick = () => window.location.href = "simgrid_finalised.html"; // change if your file name differs
+    $("backSimgridBtn").onclick = () => window.location.href = "overview.html"; // change if your file name differs
     $("logoutBtn").onclick = async () => { await auth.signOut(); window.location.href = "admin.html"; };
 
     // ---------------------------
