--- a/steward.html
+++ b/steward.html
@@ -628,7 +628,7 @@
 
       try {
         // CHANGED: load the new JSON file with Example + NFA
-        const res = await fetch("./ifwl_stewarding_codes_with_examples_and_nfa.json", { cache: "no-store" });
+        const res = await fetch("./steward_rules.json", { cache: "no-store" });
         if (!res.ok) throw new Error(`Could not load rules JSON (${res.status})`);
 
         const rules = await res.json();
